fixed gap right hand side of right gradient

--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ nav li.current_page_item a {
 
 #gradient_right {
     text-align: right;
-    left: 1px;
+    left: 2px;
     margin-left: 21.9375em;
 }
 
